# libsdl2gui

./: CMakeLists.txt  README.md
android/: .gitignore  settings.gradle
android/testsdl2gui/: build.gradle
android/testsdl2gui/src/main/: AndroidManifest.xml
android/testsdl2gui/src/main/java/com/libsdl2gui/lib/: Sdl2GuiActivity.java
android/testsdl2gui/src/main/java/com/libsdl2gui/test/: MainActivity.java
android/testsdl2gui/src/main/java/org/libsdl/app/: SDLActivity.java
android/testsdl2gui/src/main/res/values/: strings.xml
inc/: libsdl2gui.h
include/: libsdl2gui.h
src/: LSG_AndroidJNI.cpp  LSG_AndroidJNI.h  LSG_Button.cpp  LSG_Button.h  LSG_Component.cpp  LSG_Component.h  LSG_Events.cpp  LSG_Events.h  LSG_Graphics.cpp  LSG_Graphics.h  LSG_IEvent.cpp  LSG_IEvent.h  LSG_IRenderable.cpp  LSG_IRenderable.h  LSG_Image.cpp  LSG_Image.h  LSG_Line.cpp  LSG_Line.h  LSG_List.cpp  LSG_List.h  LSG_ListItem.cpp  LSG_ListItem.h  LSG_Menu.cpp  LSG_Menu.h  LSG_MenuItem.cpp  LSG_MenuItem.h  LSG_MenuSub.cpp  LSG_MenuSub.h  LSG_Modal.cpp  LSG_Modal.h  LSG_Pagination.cpp  LSG_Pagination.h  LSG_Panel.cpp  LSG_Panel.h  LSG_ProgressBar.cpp  LSG_ProgressBar.h  LSG_ScrollBar.cpp  LSG_ScrollBar.h  LSG_Slider.cpp  LSG_Slider.h  (+24 more)
test/: main.cpp  main.h  unittest.cpp
ui/: dark.colortheme  light.colortheme  main.xml
windows/: libsdl2gui.rc
